--- a/templates/main_homepage.html
+++ b/templates/main_homepage.html
@@ -76,7 +76,7 @@ nav .btn-signin:hover {
     transform: translateY(-2px); 
 }
 
-.hamburger {
+.hamburger { /*mobile menu*/
     display: none; 
     font-size: 1.5rem; 
     cursor: pointer; 
@@ -103,7 +103,7 @@ nav .btn-signin:hover {
     background: rgba(0,188,212,0.2); 
     border-radius: 50%; 
     z-index: 0; 
-    animation: float 6s ease-in-out infinite; 
+    animation: float 25s ease-in-out infinite; 
 }
 
 .hero::after {
@@ -115,7 +115,7 @@ nav .btn-signin:hover {
     height: 250px; 
     background: rgba(0,121,107,0.15); 
     border-radius: 50%; 
-    z-index: 0; animation: float 8s ease-in-out infinite alternate; 
+    z-index: 0; animation: float 29s ease-in-out infinite alternate; 
 }
 
 .hero-text {
